--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -29,20 +31,77 @@
                 
                 <div class="nav-right">
                     <div class="nav-list">
-                        <div class="nav-link">About</div>
-                        <div class="nav-link">Beats</div>
-                        <div class="nav-link">Sound Kits</div>
-                        <div class="nav-link">Contact</div>
+                        <div class="nav-link" style="border-color: #ffffff !important;">
+                            <i class="nav-link-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
+                                    <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"/>
+                                </svg>
+                            </i>
+                            Home
+                        </div>
+                        <div class="nav-link">
+                            <i class="nav-link-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-music-note" viewBox="0 0 16 16">
+                                    <path d="M9 13c0 1.105-1.12 2-2.5 2S4 14.105 4 13s1.12-2 2.5-2 2.5.895 2.5 2z"/>
+                                    <path fill-rule="evenodd" d="M9 3v10H8V3h1z"/>
+                                    <path d="M8 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 13 2.22V4L8 5V2.82z"/>
+                                </svg>
+                            </i> 
+                            Beats
+                        </div>
+                        <div class="nav-link">
+                            <i class="nav-link-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-soundwave" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M8.5 2a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-1 0v-11a.5.5 0 0 1 .5-.5zm-2 2a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zm4 0a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zm-6 1.5A.5.5 0 0 1 5 6v4a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm8 0a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm-10 1A.5.5 0 0 1 3 7v2a.5.5 0 0 1-1 0V7a.5.5 0 0 1 .5-.5zm12 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0V7a.5.5 0 0 1 .5-.5z"/>
+                                </svg>
+                            </i>
+                            Sound Kits
+                        </div>
+                        <div class="nav-link">
+                            <i class="nav-link-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-rolodex" viewBox="0 0 16 16">
+                                    <path d="M8 9.05a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
+                                    <path d="M1 1a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h.5a.5.5 0 0 0 .5-.5.5.5 0 0 1 1 0 .5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5.5.5 0 0 1 1 0 .5.5 0 0 0 .5.5h.5a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H6.707L6 1.293A1 1 0 0 0 5.293 1H1Zm0 1h4.293L6 2.707A1 1 0 0 0 6.707 3H15v10h-.085a1.5 1.5 0 0 0-2.4-.63C11.885 11.223 10.554 10 8 10c-2.555 0-3.886 1.224-4.514 2.37a1.5 1.5 0 0 0-2.4.63H1V2Z"/>
+                                </svg>
+                            </i>
+                            Contact
+                        </div>
                     </div>
                     <div class="nav-fun">
                         <div class="nav-cart">
-                            <div class="nav-cart-img">
-                                <div class="nav-cart-icon"></div>
+                            <div class="nav-click">
+                                <div class="nav-cart-img">
+                                    <div class="nav-cart-icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                                            <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
+                                        </svg>
+                                    </div>
+                                    <div class="cart-length">
+                                        <div class="cart-length-num">0</div>
+                                    </div>
+                                </div>
+                                <div class="nav-cart-num">
+                                    <span class="nav-cart-val"></span>
+                                    <span class="nav-cart-price"></span>
+                                </div>
                             </div>
-                            <div class="nav-cart-num">
-                                <span class="nav-cart-val">$</span>
-                                <span class="nav-cart-price">0.00</span>
+                            <div class="cart-block display-none">
+                                <div class="cart-list">
+                                    
+                                </div>
+                                <div class="cart-action">
+                                    <a href="" class="cart-btn-light">PROCEED TO CHECKOUT</a>
+                                    <a href="" class="cart-btn-dark">CONTINUE SHOPPING</a>
+                                </div>
                             </div>
+                        </div>
+                        <div class="nav-login">
+                            <div class="nav-login-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                                </svg>
+                            </div>
+                            <div class="nav-login-text">Log in</div>
                         </div>
                     </div>
                 </div>
@@ -57,15 +116,21 @@
                     <button class="header-search-btn">search</button>
                 </div>
             </form>
-            <div class="header-track">
-                <div class="header-track-img img-track" src="Reflect.mp3"><audio></audio></div>
+            <div class="header-track track-audio">
+                <div class="header-track-img img-track" img="reflect.png" src="Reflect.mp3">
+                    <div class="btn-play">
+                        <i class="fa fa-play" aria-hidden="true"></i>
+                        <i class="fa fa-pause display-none" aria-hidden="true"></i>
+                    </div>
+                    <audio></audio>
+                </div>
                 <div class="header-track-info">
                     <div class="header-track-text">
                         <span>Featured Track</span>
                         •
-                        <span>126BPM</span>
+                        <span class="beat-bpm">126BPM</span>
                     </div>
-                    <div class="header-track-title">Reflect</div>
+                    <div class="header-track-title beat-title">Reflect</div>
                     <div class="header-track-fun">
                         <button class="playlist-button add-cart">
                             <div class="playlist-button-icon"></div>
@@ -75,9 +140,10 @@
                             </div>
                         </button>
                         <div class="playlist-tags">
-                            <div class="playlist-tag"><a href="">#NF</a></div>
-                            <div class="playlist-tag"><a href="">#HALSEY</a></div>
+                            <div class="playlist-tag beat-tag1"><a href="">#NF</a></div>
+                            <div class="playlist-tag beat-tag2"><a href="">#HALSEY</a></div>
                         </div>
+                        <div class="beat-time"></div>
                     </div>
                 </div>
             </div>
@@ -206,6 +272,17 @@
                     <button class="btn">browse all sound kits</button>
                 </div>
             </div>
+            <div class="video">
+                <div class="video-right"></div>
+                <div class="video-left">
+                    <div class="video-chanel">
+                        <div class="video-chanel-logo"></div>
+                    </div>
+                    <div class="video-view"></div>
+                    <div class="video-videos"></div>
+                    <div class="video-btn"></div>
+                </div>
+            </div>
             <div class="contact">
                 <div class="contact-box">
                     <div class="contact-title title">Contact</div>
@@ -262,8 +339,10 @@
             </div>
         </div>
     </footer>
+    <script src="./lib/wNumb/wNumb.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/playlist.js"></script>
+    <script src="./js/add-cart.js"></script>
     <script src="./js/input.js"></script>
     <script src="./js/kits.js"></script>
     <script src="./js/audio-play.js"></script>
